# track_demo

./: .env.example  .gitignore  API_INVESTIGATION_COMPLETE.md  CLAUDE.md  FILE_INDEX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ANALYSIS_MODAL.md  INVESTIGATION_EXECUTIVE_SUMMARY.md  JBROWSE_API_INVESTIGATION.md  JBROWSE_API_INVESTIGATION_FINAL.md  JBROWSE_API_INVESTIGATION_SUMMARY.md  LAYOUT_OPTIMIZATION_REPORT.md  Makefile  PROJECT_STATUS.md  PROJECT_STATUS_API_INVESTIGATION.md  QUICK_REFERENCE.md  README.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  test.html
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  start_dev.py  test_config.py  test_langchain_tools.py  test_navigation_tool.py  test_navigation_tool_real.py  test_new_features.py  test_typing_indicator.py  test_websocket_navigation.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: ai.py  data.py  knowledge.py  sessions.py
backend/app/core/: config.py
backend/app/services/: __init__.py  ai_service.py  llm_service.py  websocket_manager.py
backend/app/tools/: __init__.py  jbrowse_langchain_tools.py  jbrowse_tools.py  navigation_tool.py
backend/app/utils/: chromosome_normalizer.py
frontend/: .env.example  ARCHITECTURE_COMPARISON.md  Dockerfile  MUI_INTEGRATION_GUIDE.md  VERIFICATION_CHECKLIST.md  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  custom-logo.css  index.css
scripts/: setup-dev.sh
shared/shared/: package.json  tsconfig.json
shared/types/: eslint.config.js  (+2 more)
src/: App.tsx  rpcWorker.ts
(+137 files in other folders)
